--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo1">
                 <img src="img/2.jpg" alt="" class="logo2">
             </div>
-            <p class="name">张叁三</p>
+            <p class="name">干点正事真菌</p>
             
             <div class="slogan" id="slogan">
                 <p class="slogan2" id="slogan2">愿风神忽悠你</p>
