--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <footer class="footer">
                 <p class="footer2">Openned in <a target="_blank" href="https://github.com/875227622">Github</a></p>
 
-                <p class="footer2">&copy2021 高坂滑稽果 &nbsp 素材来源 <a target="_blank" href="https://card.niconi.co.ni">LL查卡器</a> &nbsp 作者 <a target="_blank" href="https://www.funy233.xyz">张叁三</a></p>
+                <p class="footer2">&copy2022 张叁三 &nbsp 素材来源 <a target="_blank" href="https://card.niconi.co.ni">LL查卡器</a> &nbsp 作者 <a target="_blank" href="https://www.funy233.xyz">张叁三</a></p>
             </footer>
 
         </div>
